--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p>Your Points: <span id="points">1000</span></p>
 
   <input type="number" id="betAmount" placeholder="Enter bet points" min="1">
-  <button id="startBtn">Start Game</button>
+  <button id="startBtn">Bet now</button>
   <button id="cashoutBtn" disabled>Cash Out</button>
 
   <div class="game-area">
